src/objects/Contact.object
<!--
  ~ Copyright (c) 2017, Salesforce.com, Inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <fields>
        <fullName>DeskCreatedAt__c</fullName>
        <label>Desk Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskExternalId__c</fullName>
        <description>This custom field contains the External Id of this record from Desk.com for historical purposes.</description>
        <externalId>true</externalId>
        <label>Desk External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeskId__c</fullName>
        <description>This custom field contains the Id of this record from Desk.com for historical purposes. This field should be read-only and phased out over time and removed.</description>
        <externalId>true</externalId>
        <label>Desk Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeskUpdatedAt__c</fullName>
        <label>Desk Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HomeAddress__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>iw</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>pt_PT</fullName>
                </value>
                <value>
                    <fullName>ro</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sl</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>tr</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkAddress__c</fullName>
        <label>Work Address</label>
        <type>TextArea</type>
    </fields>
</CustomObject>